fixed some styles, broke some page being too wide

--- a/src/app/item-search/item-search.component.css
+++ b/src/app/item-search/item-search.component.css
@@ -1,10 +1,16 @@
 .search-bar {
-  width: 50em;
+  max-width: 50em;
 }
 
 .card {
   width: 10em;
   height: 10em;
+  cursor: pointer;
+}
+.card:hover {
+  color: purple;
+  border: 2px solid;
+  border-radius: 10px;
 }
 
 img {
