--- a/src/app/page-content/page-content.component.css
+++ b/src/app/page-content/page-content.component.css
@@ -1,12 +1,17 @@
 .root {
-  height: 92vh;
+  /* height: 100vh; */
   padding-top: 3em;
   padding-left: 5px;
   padding-right: 5px;
   background-color: white;
   border-radius: 1em;
+  /* overflow-y: scroll; */
+  width: auto;
+  min-height: 90vh;
 }
 .content {
   max-width: 50em;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
